--- a/io_in/color_math.html
+++ b/io_in/color_math.html
@@ -12,26 +12,48 @@
 <body>
 
     <!-- Banner -->
-    <div class="banner">[project overview text will go here]</div>
+    <div class="banner">These reference charts illustrate the HSV Color system components: <b>Hue</b>,
+        <b>Saturation</b>, and <b>Vibrancy</b>. Screen colors are mixtures of Red, Green, and Blue (RGB) light.
+        However, RGB mixtures do not map well to the intuitive way people perceive colors.  The
+        HSV system translates RGB mixtures to match perception.
+    </div>
 
-    <div class="titlenav"><h1>The Mathematics of Color: Hue, Saturation, and Value (HSV)</h1></div>
-    <div class="titlenav">[links will go here]</div>
+    <div class="titlenav"><h1>HSV Color Coordinate System: Reference Charts</h1></div>
+    <div class="titlenav">
+        <p class="navigation"><a href="https://sjoshuam.github.io">&nbsp;Return to Portfolio&nbsp;</a></p>
+        <p class="navigation"><a href="https://github.com/sjoshuam/color_math">&nbsp;Visit Project's Code Repo&nbsp;</a></p>
+    </div>
 
-    <!-- Row 1, Right -->
+    <!-- Row 1 -->
     <div class="visual"><insert>HUExVAL</insert></div>
-    <div class="text">[panel explanation will go here]</div>
-
-    <!-- Row 1, Left -->
     <div class="visual"><insert>HUE</insert></div>
-    <div class="text">[panel explanation will go here]</div>
+    <div class="text"><b>Hue</b> tracks screen colors as overlap from two RGB lights. The 
+        top-left color wheel depicts 12 colors formed this way.  For example, image you mix
+        red (0°) with blue (240°). You'll get blue-ish purple (Violet), purple (Magenta),
+        or redish-purple (Rose), depending on the ratio of red to blue light.
+        <br><br>
+        <b>Vibrancy</b> tracks how vivid a color looks.  Vibrancy corresponds to average brightness
+            of the two RGB lights mixed to form the hue.  The top-right color wheel shows how each
+            hue goes from black (V=0.0) to vibrant (V=1.0) as the lights get brighter towards the
+            wheel's rim.
+    </div>
 
-    <!-- Row 2, Right -->
+    <!-- Row 2 -->
     <div class="visual"><insert>SATxVAL</insert></div>
-    <div class="text">[panel explanation will go here]</div>
-
-    <!-- Row 2, Left -->
     <div class="visual"><insert>HUExSAT</insert></div>
-    <div class="text">[panel explanation will go here]</div>
+    <div class="text">
+        <b>Saturation</b> tracks how much light from the third RGB color is mixed with the 1-2
+        discussed above.  Third-color light makes colors look washed-out.  If the third
+        light is as bright as the other two, the color turns gray.  White light results when all
+        three RGB colors are at maximum intensity.  The bottom-left color wheel shows how each
+        hue goes from grey (S=0.0) to colorful (S=1.0) as the third color dims.
+        <br><br>
+        The bottom-right color grid shows how a single hue changes as brightness increases
+        (left to right) and saturation decreases (bottom to top). Move the slider bar to
+        change hues.
+
+
+    </div>
 
 </body>
 
