Minor line edits

--- a/io_in/color_math.html
+++ b/io_in/color_math.html
@@ -12,10 +12,10 @@
 <body>
 
     <!-- Banner -->
-    <div class="banner">These reference charts illustrate the HSV Color system components: <b>Hue</b>,
-        <b>Saturation</b>, and <b>Vibrancy</b>. Screen colors are mixtures of Red, Green, and Blue (RGB) light.
+    <div class="banner">Screen colors are mixtures of Red, Green, and Blue (RGB) light.
         However, RGB mixtures do not map well to the intuitive way people perceive colors.  The
-        HSV system translates RGB mixtures to match perception.
+        HSV system translates RGB mixtures to match perception. These reference charts illustrate
+        the HSV system's key components: <b>Hue</b>, <b>Saturation</b>, and <b>Vibrancy</b>. 
     </div>
 
     <div class="titlenav"><h1>HSV Color Coordinate System: Reference Charts</h1></div>
